syntax = "proto3";

import "google/protobuf/empty.proto";

package influxdb;

service MqttService {
    rpc WriteMeasurement (Measurement) returns (google.protobuf.Empty) {}
    rpc ReadMeasurements (Measurement) returns (stream Measurement) {}
}

message Measurement {
    string room_id = 1;
    string device_id = 2;
    float temperature = 3;
    float humidity = 4;
}
